--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "homepage": "http://willptci.github.io/Portfolio-Website",
   "name": "my-portfolio-willptci",
   "version": "0.1.0",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://mojo-portfolio-flask-backend-faed9792e71b.herokuapp.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
